# flask-app-sample

./: .env  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
app/: __init__.py  object_wrapper.py
app/routes/main/: __init__.py  main.py
app/routes/main/templates/: index.html
